# devops-db

./: README.md
Initial Images/alpine/: Dockerfile
Initial Images/ansible/: Dockerfile  requirements.txt
Initial Images/go/: Dockerfile
Initial Images/img-jenkins-devopsdb/: Dockerfile
Initial Images/k8_base/: requirements.txt
Initial Images/terraform/: Dockerfile  (+1 more)
Microk8s/: Vagrantfile
SmallStep-CA/: values-step1.yaml  values-step2.yaml  values-step3.yaml
Work ToDo/: Pipeline Docker Images.txt  dns_management.yaml  docker_images.yaml  htpasswd
bind9/: Vagrantfile  docker-compose.yaml
cassandra-ldap/: _remote.repositories  cassandra-ldap-4.0.7-1.1.0.pom
devpi/: Vagrantfile  config.yml  logger.yaml
elasticsearch/: Vagrantfile.rb  config-map-custom.yaml  config-map.yaml  filebeat-config-custom.yaml  filebeat-config.yaml
gitlab/: Vagranfile  Vagrantfile  gitlab.rb
jenkins/: docker-compose.yaml
knowledge-base/python/tokens/modulo/: pyproject.toml  test.py
knowledge-base/python/tokens/modulo/token_lib/: __init__.py  branca.py  jwt.py  keys.py  paseto.py
knowledge-base/python/tokens/modulo/token_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lam/: docker-compose.yaml
nexus/: nexus-deployment.yaml  nexus-ingress.yaml  nexus-pv.yaml  nexus-pvc.yaml  nexus-service.yaml
openldap/: Vagrantfile  docker-compose.yaml  initial-devops-db.ldif  jenkins_sec_group.ldif
postgresql/: Vagrantfile
registry/: docker-compose.yaml
samba/: Install.txt  docker-compose.yml
vagrant-multi-plat-tests/: Vagrantfile
vault/: Vagrantfile  certificate.conf
(+340 files in other folders)
