[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-lib"
version = "0.1.0"
description = "Token generation and validation (PASETO, JWT, Branca)"
authors = [{ name = "Fausto Branco" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "cryptography"
]